fixed alignment for background 2 card

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -127,6 +127,7 @@
     color: white;
     width: 100%;
     text-align: center;
+    justify-content: center;
 
     .subtitlerr {
       font-size: 32px;
